# experimental_mobile_robotics

./: README.md
Competitions/Competition1/: package.xml
Competitions/Competition1/launch/: wander.launch  wander.launch~  wanderSim.launch  wanderSim.launch~
Competitions/Competition1/src/: follower.py  pursuit.launch  wanderNew.py  wanderNew.py~  wanderSM.py  wanderSM.py~
Competitions/Competition2/: follow.launch  follower_p.py
Competitions/Competition3/: comp3.py
Competitions/Competition4/: CMakeLists.txt  comp3.pgm  comp3.yaml  package.xml  setup.py
Competitions/Competition4/launch/: easter.launch  usb_single.launch
Competitions/Competition4/src/competition_4/: control_center.py  localize.py  tag_detector.py  target_docker.py
Competitions/Competition5/: CMakeLists.txt  minimal.yaml  package.xml  setup.py
Competitions/Competition5/launch/: ar.launch  hide.launch  seek.launch
Competitions/Competition5/navigation_layers/game_navigation_layers/: CHANGELOG.rst  CMakeLists.txt  costmap_plugins.xml  package.xml
Competitions/Competition5/navigation_layers/game_navigation_layers/cfg/: HidingLayer.cfg  SeekingLayer.cfg
Competitions/Competition5/navigation_layers/game_navigation_layers/include/game_navigation_layers/: game_hiding_layer.h  game_seeking_layer.h  hiding_layer.h  seeking_layer.h
Competitions/Competition5/navigation_layers/game_navigation_layers/src/: game_hiding_layer.cpp  game_seeking_layer.cpp  hiding_layer.cpp  seeking_layer.cpp
Competitions/Competition5/navigation_layers/navigation_layers/: package.xml
Competitions/Competition5/src/final_project/: ar_tracker.py  find_ar.py  hide.py  seek.py  seek2.py
Demonstrations/: wanderSM.py
