<package>
  <name>game_navigation_layers</name>
  <version>0.3.1</version>
  <description>
  Plugin-based layers for the navigation stack that 
  implement various game navigation contraints, like proxemic distance. 
  </description>
  <author email="davidvlu@gmail.com">David V. Lu!!</author>
  <maintainer email="davidvlu@gmail.com">David V. Lu!!</maintainer>
  <license>BSD</license>
  <url>http://ros.org/wiki/game_navigation_layers</url>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>roscpp</build_depend>
  <build_depend>costmap_2d</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  
  <run_depend>roscpp</run_depend>
  <run_depend>costmap_2d</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>

<export>
  <costmap_2d plugin="${prefix}/costmap_plugins.xml" />
</export>

</package>


