<package>
    <name>navigation_layers</name>
    <version>0.3.1</version>
    <description>Extra navigation layers.</description>
    <maintainer email="davidvlu@gmail.com">David V. Lu!!</maintainer>
    <author>David V. Lu!!</author>
    <license>BSD</license>  

    <buildtool_depend>catkin</buildtool_depend>

    <run_depend>game_navigation_layers</run_depend>
    <export>
        <metapackage/>
    </export>
</package>
